--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,6 @@ python-dotenv==1.0.0
 pydantic==2.4.2
 panoramisk==1.3
 python-socketio==5.10.0
+python-engineio==4.8.0
+requests==2.31.0
+uvicorn==0.24.0
