--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -8,3 +8,7 @@ requests==2.31.0
 gevent==24.2.1
 gevent-websocket==0.10.1
 urllib3==2.0.7
+python-socketio==5.10.0
+python-engineio==4.8.0
+pytest==7.4.2
+uvicorn==0.22.0
