--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,20 @@ env/
 
 # Logs
 *.log
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# JavaScript/Frontend
+.DS_Store
+.cache/
+coverage/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
